--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
       <nav class="header-navigation">
         <a class="header-logo" href="./index.html">
-          <span class="web">Web</span>Studio</a
+          Web <span class="studio">Studio</span></a
         >
         <ul class="header-list">
           <li class="header-items"><a href="./index.html">Studio</a></li>
@@ -190,7 +190,7 @@
     </main>
     <footer class="footer">
       <a class="footer-link" href="./index.html"
-        ><span class="web">Web</span>Studio</a
+        >">Web <span class="studio">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
