--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <header class="header">
       <nav class="header-navigation">
         <a class="header-logo" href="./index.html">
-          Web <span class="studio">Studio</span></a
+          Web <span class="header-studio">Studio</span></a
         >
         <ul class="header-list">
-          <li class="header-items"><a href="./index.html">Studio</a></li>
+          <li class="header-items-link"><a href="./index.html">Studio</a></li>
           <li class="header-items"><a href="">Portfolio</a></li>
           <li class="header-items"><a href="">Contacts</a></li>
         </ul>
