--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <ul class="portfolio-list">
           <li class="portfolio-items">
             <img
-              src="./img/section-3/img(1)(1).jpg"
+              src="./img/section-3/img1.jpg"
               alt="Banking App"
               width="360"
               class="portfolio-img"
@@ -137,7 +137,7 @@
           </li>
           <li class="portfolio-items">
             <img
-              src="./img/section-3/img(2)(1).jpg"
+              src="./img/section-3/img2.jpg"
               alt="Cashless Payment"
               width="360"
               class="portfolio-img"
@@ -147,7 +147,7 @@
           </li>
           <li class="portfolio-items">
             <img
-              src="./img/section-3/img(3)(1).jpg"
+              src="./img/section-3/img3.jpg"
               alt="Meditation App"
               width="360"
               class="portfolio-img"
@@ -157,7 +157,7 @@
           </li>
           <li class="portfolio-items">
             <img
-              src="./img/section-3/img(4)(1).jpg"
+              src="./img/section-3/img4.jpg"
               alt="Taxi Service"
               width="360"
               class="portfolio-img"
@@ -167,7 +167,7 @@
           </li>
           <li class="portfolio-items">
             <img
-              src="./img/section-3/img(5)(1).jpg"
+              src="./img/section-3/img5.jpg"
               alt="Screen Illustrations"
               width="360"
               class="portfolio-img"
@@ -177,7 +177,7 @@
           </li>
           <li class="portfolio-items">
             <img
-              src="./img/section-3/img(6)(1).jpg"
+              src="./img/section-3/img6.jpg"
               alt="Online Courses"
               width="360"
               class="portfolio-img"
