--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
           Web <span class="header-studio">Studio</span></a
         >
         <ul class="header-list">
-          <li class="header-items-link"><a href="./index.html">Studio</a></li>
-          <li class="header-items"><a href="">Portfolio</a></li>
-          <li class="header-items"><a href="">Contacts</a></li>
+          <li><a href="./index.html" class="header-items-link">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="contacts">
@@ -127,7 +127,7 @@
         <ul class="portfolio-list">
           <li class="portfolio-items">
             <img
-              src="./img/section-3/img1.jpg"
+              src="./img/section-3/images1.jpg"
               alt="Banking App"
               width="360"
               class="portfolio-img"
@@ -137,7 +137,7 @@
           </li>
           <li class="portfolio-items">
             <img
-              src="./img/section-3/img2.jpg"
+              src="./img/section-3/images2.jpg"
               alt="Cashless Payment"
               width="360"
               class="portfolio-img"
@@ -147,7 +147,7 @@
           </li>
           <li class="portfolio-items">
             <img
-              src="./img/section-3/img3.jpg"
+              src="./img/section-3/images3.jpg"
               alt="Meditation App"
               width="360"
               class="portfolio-img"
@@ -157,7 +157,7 @@
           </li>
           <li class="portfolio-items">
             <img
-              src="./img/section-3/img4.jpg"
+              src="./img/section-3/images4.jpg"
               alt="Taxi Service"
               width="360"
               class="portfolio-img"
@@ -167,7 +167,7 @@
           </li>
           <li class="portfolio-items">
             <img
-              src="./img/section-3/img5.jpg"
+              src="./img/section-3/images5.jpg"
               alt="Screen Illustrations"
               width="360"
               class="portfolio-img"
@@ -177,7 +177,7 @@
           </li>
           <li class="portfolio-items">
             <img
-              src="./img/section-3/img6.jpg"
+              src="./img/section-3/images6.jpg"
               alt="Online Courses"
               width="360"
               class="portfolio-img"
