--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         >
         <ul class="header-list">
           <li><a href="./index.html" class="header-items-link">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a href="" class="header-items-link">Portfolio</a></li>
+          <li><a href="" class="header-items-link">Contacts</a></li>
         </ul>
       </nav>
       <address class="contacts">
