--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     </main>
     <footer class="footer">
       <a class="footer-link" href="./index.html"
-        >">Web <span class="studio">Studio</span></a
+        >Web <span class="studio">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
