--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <ul class="team-list">
           <li class="team-items">
             <img
-              src="./img/section-2/img.jpg"
+              src="./images/section-2/img.jpg"
               alt="Mark Guerrero"
               width="264"
               class="team-img"
@@ -92,7 +92,7 @@
           </li>
           <li class="team-items">
             <img
-              src="./img/section-2/img(1)-2.jpg"
+              src="./images/section-2/img(1)-2.jpg"
               alt="Tom Ford"
               width="264"
               class="team-img"
@@ -102,7 +102,7 @@
           </li>
           <li class="team-items">
             <img
-              src="./img/section-2/img(2)-2.jpg"
+              src="./images/section-2/img(2)-2.jpg"
               alt="Camila Garcia"
               width="264"
               class="team-img"
@@ -112,7 +112,7 @@
           </li>
           <li class="team-items">
             <img
-              src="./img/section-2/img(3)-2.jpg"
+              src="./images/section-2/img(3)-2.jpg"
               alt="Daniel Wilson"
               width="264"
               class="team-img"
@@ -127,7 +127,7 @@
         <ul class="portfolio-list">
           <li class="portfolio-items">
             <img
-              src="./img/section-3/images1.jpg"
+              src="./images/section-3/images1.jpg"
               alt="Banking App"
               width="360"
               class="portfolio-img"
@@ -137,7 +137,7 @@
           </li>
           <li class="portfolio-items">
             <img
-              src="./img/section-3/images2.jpg"
+              src="./images/section-3/images2.jpg"
               alt="Cashless Payment"
               width="360"
               class="portfolio-img"
@@ -147,7 +147,7 @@
           </li>
           <li class="portfolio-items">
             <img
-              src="./img/section-3/images3.jpg"
+              src="./images/section-3/images3.jpg"
               alt="Meditation App"
               width="360"
               class="portfolio-img"
@@ -157,7 +157,7 @@
           </li>
           <li class="portfolio-items">
             <img
-              src="./img/section-3/images4.jpg"
+              src="./images/section-3/images4.jpg"
               alt="Taxi Service"
               width="360"
               class="portfolio-img"
@@ -167,7 +167,7 @@
           </li>
           <li class="portfolio-items">
             <img
-              src="./img/section-3/images5.jpg"
+              src="./images/section-3/images5.jpg"
               alt="Screen Illustrations"
               width="360"
               class="portfolio-img"
@@ -177,7 +177,7 @@
           </li>
           <li class="portfolio-items">
             <img
-              src="./img/section-3/images6.jpg"
+              src="./images/section-3/images6.jpg"
               alt="Online Courses"
               width="360"
               class="portfolio-img"
